# win-element-selector-rs

./: .gitignore  COMPILE_FIX_RECORD.md  Cargo.toml  DESIGN_XPATH_OPTIMIZER.md  FEATURES_ROADMAP.md  PERFORMANCE_DIAGNOSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  TEST_MINIMAL_OPTIMIZATION.md  XPATH_PERFORMANCE_FIX.md  build.rs  test_output.txt
.cargo/: config.toml
.codebuddy/memory/: 2026-05-27.md  MEMORY.md
.codebuddy/plans/: enrich-uia-property-filters_71d8a841.md  sync-server-sdk-full-properties_21c45ac6.md  sync-server-sdk-with-core-updates_15f3602e(未完成).md  windows-only-simplify_784084e4.md
assets/: icon_32.rgba
docs/: API_DESIGN_REVIEW.md  CAPTURE_LOCATE_DESIGN.md  CAPTURE_LOCATE_REFACTOR_PLAN.md  COM_MIGRATION_REPORT_FINAL.md  MULTI_HIGHLIGHT_USAGE.md  MULTI_LAYER_FINDALL_OPTIMIZATION.md  QA_TEST_PLAN_RUNTIME_ID_CACHE.md  RUNTIME_ID_CACHE_PLAN.md  XPATH_REFACTOR_PLAN.md  XPATH_REMEDIATION_PLAN.md
examples/: multi_highlight_demo.rs
sdk/nodejs/: API_DESIGN_RATIONALE.md  BUGFIX_SUMMARY.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_LEVELS_GUIDE.md  QUICK_START_LOGGING.md  README.md  V2_DESIGN.md  WINDOWS_ENCODING_FIX.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/nodejs/examples/: basic-usage.ts  e2e-test.ts  humanize-demo.ts  idle-motion-demo.ts  simple-usage.ts  test-api.ts  test-logging-levels.ts  test-logging.ts  test-multiple-clicks.ts  test-yuanbao.ts  v2-basic-usage.ts
sdk/nodejs/screenshots/: 2026-04-28T07-32-05-failure-find.png.json  2026-04-28T07-32-05-failure-find.png.txt  2026-04-28T07-32-56-failure-find.png.json  2026-04-28T07-32-56-failure-find.png.txt  2026-04-28T07-34-06-failure-find.png.json  2026-04-28T07-34-06-failure-find.png.txt  2026-04-28T08-57-48-failure-find.png.json  2026-04-28T08-57-48-failure-find.png.txt  2026-04-28T09-24-39-failure-waitFor.png.json  2026-04-28T09-24-39-failure-waitFor.png.txt
sdk/nodejs/src/: action-chain.ts  chain.ts  client.ts  errors.ts  humanize-context.ts  index.ts  logger.ts  screenshot.ts  types.ts  utils.ts
sdk/nodejs/src/__tests__/: chain.test.ts  integration.test.ts  types.test.ts  utils.test.ts
sdk/nodejs/src/v2/: fluent-chain.ts  index.ts  screenshot.ts
sdk/nodejs/src/v2/__tests__/: fluent-chain.test.ts
src/: app.rs  capture.rs  capture_overlay.rs  error.rs  highlight.rs  lib.rs  main.rs  model.rs  mouse_control.rs  mouse_hook.rs  xpath.rs
src/api/: element.rs  idle_motion.rs  keyboard.rs  mod.rs  mouse.rs  offset_parser.rs  types.rs  window.rs
src/core/: com_worker.rs  commonality.rs  element_cache.rs  enum_windows.rs  error.rs  metrics.rs  mod.rs  model.rs  narrator.rs  screenshot.rs  similarity.rs  uia.rs  uia_context.rs  xpath.rs  xpath_optimizer.rs
src/core/uia/: actions.rs  cache.rs  capture.rs  element.rs  find.rs  find_control.rs  find_raw.rs  helpers.rs  inspect.rs  mod.rs  navigation.rs  validation.rs  visibility.rs  window.rs
src/gui/: app.rs  capture_overlay.rs  helpers.rs  highlight.rs  iced_app.rs  iced_style.rs  input_hook.rs  layout.rs  logger.rs  mod.rs  mouse_hook.rs  multi_highlight.rs  persistence.rs  raw_input.rs  state_model.rs  theme.rs  types.rs
test_highlight_app/: Cargo.toml
tests/: api_integration_tests.rs
tests/common/: mod.rs
