[package]
name = "element-selector"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Windows UI Automation element selector tool"

[dependencies]
eframe    = { version = "0.29.1", features = ["default"] }
egui      = "0.29.1"
egui_extras = "0.29.1"
anyhow    = "1.0"
thiserror = "2.0"
log       = "0.4"
env_logger = "0.11"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
uiauto-xpath = { path = "../uiauto-xpath" }

# HTTP 服务化依赖
actix-web = "4"
tokio     = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand      = "0.8"
clap      = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true

[profile.dev]
opt-level = 1

[[bin]]
name = "element-selector"
path = "src/main.rs"

[[bin]]
name = "element-selector-server"
path = "src/bin/server.rs"