[package]
name = "element-selector"
version = "1.0.1"
edition = "2021"
authors = ["evlon"]
description = "Windows UI Automation element selector tool"

[dependencies]
# GUI framework: migrated from egui/eframe to iced
iced = { version = "0.13", features = ["tokio", "advanced"] }
iced_aw = "0.12"
dirs      = "6"
anyhow    = "1.0"
thiserror = "2.0"
log       = "0.4"
env_logger = "0.11"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rdev = { version = "0.5", features = ["unstable_grab"] }
uiauto-xpath = { path = "../uiauto-xpath" }

# HTTP 服务化依赖
actix-web = "4"
tokio     = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand      = "0.8"
clap      = { version = "4", features = ["derive"] }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_HiDpi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Globalization",
] }

[profile.release]
opt-level   = 3
lto         = false       # 禁用 LTO 以避免 OOM
codegen-units = 16        # 更多并行单元
strip       = true

[profile.dev]
opt-level = 1

[build-dependencies]
embed-resource = "3"

[[bin]]
name = "element-selector"
path = "src/main.rs"

[[bin]]
name = "element-selector-server"
path = "src/bin/server.rs"